# OpenGLShader

./: CMakeLists.txt  README.md  meson.build
src/: CMakeLists.txt  meson.build  shader.cpp
src/include/OpenGLShader/: shader.h
